Add role to user
